--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
+    "tools_name" : "interceptor",
+    "tools_name_verb" : "intercept",
+    "tools_name_adj" : "intercepted",
+    "tools_name_abr" : "ictp",
     "hsa" : {
         "input_csv" : "/home/lneto/Interceptor-Generator/script/output/hsa.csv",
         "includes" : ["hsa.h", "hsa_ext_amd.h"],
@@ -6,7 +10,7 @@
         "lib" : "/opt/rocm/lib/libhsa-runtime64.so"
     },
     "hip" : {
-        "input_csv" : "",
+        "input_csv" : "/home/lneto/Interceptor-Generator/script/output/hip_runtime_api.csv",
         "includes" : ["hip_runtime.h"],
         "include_path" : "/opt/rocm/include/hip",
         "lib" : "/opt/rocm/lib/libamdhip64.so"
