--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "tools_name" : "interceptor",
-    "tools_name_verb" : "intercept",
-    "tools_name_adj" : "intercepted",
-    "tools_name_abr" : "ictp",
+    "tools_name" : "ratelprof",
+    "tools_name_verb" : "profile",
+    "tools_name_adj" : "profiled",
+    "tools_name_abr" : "prof",
     "hsa" : {
         "input_csv" : "/home/lneto/Interceptor-Generator/script/output/hsa.csv",
         "includes" : ["hsa.h", "hsa_ext_amd.h"],
