--- a/config.json
+++ b/config.json
@@ -7,12 +7,14 @@
         "input_csv" : "/home/lneto/Interceptor-Generator/script/output/hsa.csv",
         "includes" : ["hsa.h", "hsa_ext_amd.h"],
         "include_path" : "/opt/rocm/include/hsa",
+        "compile_flag" : "",
         "lib" : "/opt/rocm/lib/libhsa-runtime64.so"
     },
     "hip" : {
         "input_csv" : "/home/lneto/Interceptor-Generator/script/output/hip_runtime_api.csv",
         "includes" : ["hip_runtime.h"],
         "include_path" : "/opt/rocm/include/hip",
+        "compile_flag" : "-D __HIP_PLATFORM_AMD__",
         "lib" : "/opt/rocm/lib/libamdhip64.so"
     }
 }
