--- a/config.json
+++ b/config.json
@@ -1,9 +1,10 @@
 {
     "tools_name" : "ratelprof",
-    "tools_name_verb" : "intercept",
-    "tools_name_adj" : "intercepted",
-    "tools_name_abr" : "intcp",
-    "tools_name_noun" : "interception",
+    "tools_name_verb" : "profile",
+    "tools_name_adj" : "profiled",
+    "tools_name_abr" : "prof",
+    "tools_name_noun" : "profile",
+    "tools_name_gerund" : "profiling",
     "hsa" : {
         "input_csv" : "./script/output/hsa.csv",
         "includes" : ["hsa.h", "hsa_ext_amd.h"],
