--- a/config.json
+++ b/config.json
@@ -6,14 +6,14 @@
     "tools_name_noun" : "profile",
     "tools_name_gerund" : "profiling",
     "hsa" : {
-        "input_csv" : "./script/output/hsa.csv",
+        "input_csv" : "./output/hsa.csv",
         "includes" : ["hsa.h", "hsa_ext_amd.h"],
         "include_path" : "/opt/rocm/include/hsa",
         "compile_flag" : "",
         "lib" : "/opt/rocm/lib/libhsa-runtime64.so"
     },
     "hip" : {
-        "input_csv" : "./script/output/hip_runtime_api.csv",
+        "input_csv" : "./output/hip_runtime_api.csv",
         "includes" : ["hip_runtime.h"],
         "include_path" : "/opt/rocm/include/hip",
         "compile_flag" : "-D __HIP_PLATFORM_AMD__",
