--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "gen_dir" : "/home/lneto/RATELProf",
-    "tools_name" : "ratelprof2",
+    "tools_name" : "ratelprof",
     "tools_name_verb" : "profile",
     "tools_name_adj" : "profiled",
     "tools_name_abr" : "prof",
