--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "gen_dir" : "./gen",
+    "gen_dir" : "/home/lneto/RATELProf",
     "tools_name" : "ratelprof",
     "tools_name_verb" : "profile",
     "tools_name_adj" : "profiled",
