Sample modified and script fixed

--- a/Sample/strings.ini
+++ b/Sample/strings.ini
@@ -30,6 +30,10 @@ I_INIT_FUNC = {TOOLS_NAME}_init
 I_INIT_FUNC_DECL = {I_STATUS_TYPE} {I_INIT_FUNC}()
 I_FINI_FUNC = {TOOLS_NAME}_fini
 I_FINI_FUNC_DECL = {I_STATUS_TYPE} {I_FINI_FUNC}()
+I_START_FUNC = {TOOLS_NAME}_start
+I_START_FUNC_DECL = {I_STATUS_TYPE} {I_START_FUNC}()
+I_STOP_FUNC = {TOOLS_NAME}_stop
+I_STOP_FUNC_DECL = {I_STATUS_TYPE} {I_STOP_FUNC}()
 I_GET_DOMAIN_FUNC = get_domain_name
 I_GET_DOMAIN_FUNC_DECL = const char* {I_GET_DOMAIN_FUNC}({I_DOMAIN_T} domain)
 I_GET_FUNAME_FUNC = get_funame_by_id
@@ -80,7 +84,7 @@ LC_FINI_FUNC_DECL = {I_STATUS_TYPE} {LC_FINI_FUNC}()
 LC_GET_PHASE_FUNC = {TOOLS_NAME}_get_current_phase
 LC_GET_PHASE_FUNC_DECL = {LC_PHASE_T} {LC_GET_PHASE_FUNC}()
 LC_GET_LC_FUNC = {TOOLS_NAME}_get_lifecycle
-LC_GET_LC_FUNC_DECL = {LC_T} {LC_GET_LC_FUNC}()
+LC_GET_LC_FUNC_DECL = {LC_T}* {LC_GET_LC_FUNC}()
 
 PLUG = plugin
 PLG_SRC = {PLUG}.c
